--- a/public/pages/contact.ejs
+++ b/public/pages/contact.ejs
@@ -7,7 +7,6 @@
 </head>
 
 <body class="bg-gradient-to-r from-emerald-800 to-pink-gradient">
-
     <!-- height container -->
     <div class="flex flex-col pb-3 container-height">
         <!-- horizontal container -->
@@ -15,11 +14,15 @@
             <!-- vertical container -->
             <div class="flex flex-col gap-4">
                 <span class="title-common bg-indigo-700">Contact Me</span>
-                <div class="flex flex-col gap-4 ">
+                <!-- 2 empty spans for spacing purposes, don't ask -->
+                <span></span>
+                <span></span>
+                <div class="flex flex-col gap-2 ">
                     <a href="https://www.linkedin.com/in/skylerwittman"><img class="img mx-18"
                             src='../images/LinkedInImage.png' alt='LinkedIn'></a>
                     <a href="https://github.com/SkylerWittman"><img class="img mx-18" src='../images/GitHubImage.png'
                             alt='GitHub'></a>
+                    <a href="https://twitter.com/SkylerWittman"><img class="img mx-18" src='../images/TwitterIcon.png' alt='GitHub'></a>
                     <a href="mailto:skyler.wittman@gmail.com"><img class="img mx-18" src='../images/Email.png'
                             alt='Email'></a>
                 </div>
