--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -22,20 +22,23 @@
                 <span class="terminal-span">Product-minded developer focused on solving customer problems</span>
                 <span class="terminal-span">
                     Specialties: <br>
-                    &emsp; > Data analytics, API development, feature design, pragmatism
+                    &emsp; > Data analytics, software systems, API development, feature design, pragmatism, core competencies
                 </span>
                 <span class="terminal-span">
-                    Currently @ <a class="font-medium text-lightspeed-red"
-                        href="https://www.lightspeedhq.com/pos/retail/analytics">Lightspeed</a>
-                    building Lightspeed Analytics using python, SQL, some React & TypeScript
-                    <br> &emsp; > CTO of <a class="text-geoclique-green"
+                    Currently <strong>CTO</strong> @ <a class="font-medium text-croogloo-green" href="https://www.croogloo.com">Croogloo</a>
+                    building the most customer-centric production management software around
+                    </span>
+                    
+                    <span class="terminal-span">
+                        Also <strong>CTO</strong> @ <a class="text-geoclique-green"
                         href="https://www.geoclique.com/welcome">GeoClique</a>
                     revolutionizing the real estate investment industry
                 </span>
 
                 <span class="terminal-span">
-                    Previously: <br>
-                    &emsp; > built Lightspeed Payments, Omnichannnel point of sale software @ <span
+                    Previously: <br />
+                    &emsp; > built Lightspeed Analytics using python, SQL, some React & TypeScript & <br />
+                    <span> &emsp; > Lightspeed Payments, Omnichannnel point of sale software @ <span
                         class="font-medium text-lightspeed-red">Lightspeed</span> <br>
                     &emsp; > AIoT backend development @ <span class="text-mnubo-blue font-medium">Mnubo</span>
                 </span>
