Upgrading to TypeScript

--- a/public/views/contact.ejs
+++ b/public/views/contact.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <%- include('../views/header.ejs'); %>
+    <%- include('header.ejs'); %>
         <title>Contact Me</title>
 </head>
 
@@ -22,7 +22,8 @@
                             src='../images/LinkedInImage.png' alt='LinkedIn'></a>
                     <a href="https://github.com/SkylerWittman"><img class="img mx-18" src='../images/GitHubImage.png'
                             alt='GitHub'></a>
-                    <a href="https://twitter.com/SkylerWittman"><img class="img mx-18" src='../images/TwitterIcon.png' alt='GitHub'></a>
+                    <a href="https://twitter.com/SkylerWittman"><img class="img mx-18" src='../images/TwitterIcon.png'
+                            alt='GitHub'></a>
                     <a href="mailto:skyler.wittman@gmail.com"><img class="img mx-18" src='../images/Email.png'
                             alt='Email'></a>
                 </div>
@@ -35,7 +36,7 @@
         </div>
     </div>
 
-    <%- include('../views/footer.ejs'); %>
+    <%- include('footer.ejs'); %>
 
 </body>
 
