--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <%- include('../views/header.ejs'); %>
+    <%- include('header.ejs'); %>
         <title>Skyler Wittman</title>
 </head>
 
@@ -22,15 +22,17 @@
                 <span class="terminal-span">Product-minded developer focused on solving customer problems</span>
                 <span class="terminal-span">
                     Specialties: <br>
-                    &emsp; > Data analytics, software systems, API development, feature design, pragmatism, core competencies
+                    &emsp; > Data analytics, software systems, API development, feature design, pragmatism, core
+                    competencies
                 </span>
                 <span class="terminal-span">
-                    Currently <strong>CTO</strong> @ <a class="font-medium text-croogloo-green" href="https://www.croogloo.com">Croogloo</a>
+                    Currently <strong>CTO</strong> @ <a class="font-medium text-croogloo-green"
+                        href="https://www.croogloo.com">Croogloo</a>
                     building the most customer-centric production management software around
-                    </span>
-                    
-                    <span class="terminal-span">
-                        Also <strong>CTO</strong> @ <a class="text-geoclique-green"
+                </span>
+
+                <span class="terminal-span">
+                    Also <strong>CTO</strong> @ <a class="text-geoclique-green"
                         href="https://www.geoclique.com/welcome">GeoClique</a>
                     revolutionizing the real estate investment industry
                 </span>
@@ -39,9 +41,9 @@
                     Previously: <br />
                     &emsp; > built Lightspeed Analytics using python, SQL, some React & TypeScript & <br />
                     <span> &emsp; > Lightspeed Payments, Omnichannnel point of sale software @ <span
-                        class="font-medium text-lightspeed-red">Lightspeed</span> <br>
-                    &emsp; > AIoT backend development @ <span class="text-mnubo-blue font-medium">Mnubo</span>
-                </span>
+                            class="font-medium text-lightspeed-red">Lightspeed</span> <br>
+                        &emsp; > AIoT backend development @ <span class="text-mnubo-blue font-medium">Mnubo</span>
+                    </span>
             </div>
         </div>
         <div class="flex justify-center gap-2 sm:gap-4">
@@ -50,7 +52,7 @@
         </div>
     </div>
 
-    <%- include('../views/footer.ejs'); %>
+    <%- include('footer.ejs'); %>
 
 
 </body>
